<resources>
    <string name="app_name">Prototype2</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="familyName">Family name</string>
    <string name="email">Email</string>
    <string name="emailHint">Example@email.com</string>
    <string name="password">Password</string>
    <string name="gender">Gender</string>
    <string name="bDate">Birth date</string>
    <string name="bDatePattern">DD/MM/YYYY ie. 01/12/2005</string>
    <string name="tel">Telephone number</string>
    <string name="tel_Hint">0XX-XXX-XXXX</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="ga">เก</string>
    <string name="other">Others</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="title_activity_registeration">Null</string>
    <string name="large_text">Null</string>
    <string name="action_settings">Null</string>
    <string name="addAppointment">Add an Appointment</string>
    <string name="viewAppointment">View Appointment</string>
    <string name="menu">Menu</string>
    <string name="selectAppointmentDate">Select Appointment date</string>
    <string name="ChangeAppointmentDate">Change Appointment date</string>
    <string name="OldAppointmentDate">Old Appointment date</string>
    <string name="NewAppointmentDate">New Appointment date</string>

</resources>