<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/checkButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/registText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#3F51B5"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/registration"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:typeface="monospace" />
    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="15dp">

                <TextView
                    android:id="@+id/nameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAlignment="textStart"
                    android:textColor="#3d3d3d"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/nameNotInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:paddingTop="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="15dp">

                <TextView
                    android:id="@+id/famnameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/familyName"
                    android:textAlignment="textStart"
                    android:textColor="#3d3d3d"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/famnameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/familyName"
                    android:inputType="text"
                    android:paddingTop="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="15dp">

                <TextView
                    android:id="@+id/genderText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textAlignment="textStart"
                    android:textColor="#3d3d3d"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radioGender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp">

                    <RadioButton
                        android:id="@+id/radioButtonMale"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textColor="#3d3d3d" />

                    <RadioButton
                        android:id="@+id/radioButtonFemale"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/female"
                        android:textColor="#3d3d3d" />

                    <RadioButton
                        android:id="@+id/radioButtonGa"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/ga"
                        android:textColor="#3d3d3d" />

                    <RadioButton
                        android:id="@+id/radioButtonOthers"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/other"
                        android:textColor="#3d3d3d" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="15dp">

                <TextView
                    android:id="@+id/selectAppointText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bDate"
                    android:textAlignment="textStart"
                    android:textColor="#3d3d3d"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/AppointdateInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/bDatePattern"
                    android:inputType="date"
                    android:paddingTop="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="15dp">

                <TextView
                    android:id="@+id/telText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tel"
                    android:textAlignment="textStart"
                    android:textColor="#3d3d3d"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/telInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/tel_Hint"
                    android:inputType="phone"
                    android:paddingTop="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="15dp">

                <TextView
                    android:id="@+id/bDateText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textAlignment="textStart"
                    android:textColor="#3d3d3d"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/emailHint"
                    android:inputType="textEmailAddress"
                    android:paddingTop="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="15dp">

                <TextView
                    android:id="@+id/pedText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textAlignment="textStart"
                    android:textColor="#3d3d3d"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/pwdInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingTop="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="30dp"
                android:paddingBottom="30dp">

                <Button
                    android:id="@+id/submitAppointmentButton"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/submit" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>