<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeAppointmentDateActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/registText2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#3F51B5"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/ChangeAppointmentDate"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:typeface="monospace" />
    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="15dp">

                <TextView
                    android:id="@+id/nameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAlignment="textStart"
                    android:textColor="#3d3d3d"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/nameNotInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:allowUndo="false"
                    android:autoText="false"
                    android:clickable="false"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:paddingTop="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="15dp">

                <TextView
                    android:id="@+id/OldAppointText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/OldAppointmentDate"
                    android:textAlignment="textStart"
                    android:textColor="#3d3d3d"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/OldAppointdateInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/bDatePattern"
                    android:inputType="date"
                    android:paddingTop="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="15dp">

                <TextView
                    android:id="@+id/NewAppointText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NewAppointmentDate"
                    android:textAlignment="textStart"
                    android:textColor="#3d3d3d"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/NewAppointdateInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/bDatePattern"
                    android:inputType="date"
                    android:paddingTop="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="30dp"
                android:paddingBottom="30dp">

                <Button
                    android:id="@+id/changeAppointmentButton"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/submit" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>